# tstu-computation-theory

./: LICENSE  README.md
CourseWork/report/: .gitignore  appendix.tex  bibpage.tex  config.tex  content.tex  main.tex  packages.tex  presentation.odp  refs.bib  titlepage.tex
CourseWork/src/: main.py  pyproject.toml
CourseWork/src/src/: disk.py  drawable.py  game.py  gamestate.py  hanoi.py  main.py  position.py  printable.py  ptext.py  size.py  tower.py
CourseWork/src/tests/: test_game.py  test_tower.py
CourseWork/vanila-report/: content.tex  main.tex  packages.tex  titlepage.tex
CourseWork/vanila-report/src/: Code.hs
Lab-1/report/: config.tex  content.tex  titlepage.tex
Lab-1/src/: README.md  pyproject.toml
Lab-1/src/lab1_project/: gui.py  insertion_sort.py  random_numbers.py  selection_sort.py  sorts.py  utils.py
Lab-2/: .gitignore  README.md  base.py  cursor.py  field.py  game.py  main.py  object.py  pyproject.toml  unit.py  utils.py
Lab-2/landscape/: bush.py  landscape.py  rock.py  water.py
Lab-2/report/: Makefile  config.tex  content.tex  packages.tex
Lab-2/src/: .gitignore  base.py  cell.py  combatable.py  cursor.py  drawable.py  field.py  game.py  landscape.py  main.py  movable.py  object.py  pyproject.toml  unit.py
Lab-2/src/game/: cell.py  combatable.py  cursor.py  drawable.py  field.py  gamestate.py  main.py  movable.py  position.py  utils.py
Lab-2/src/game/display/: cell.py  field.py  position.py  screen.py
Lab-2/src/game/interface/: combatable.py  drawable.py  movable.py
Lab-2/src/game/landscapes/: bush.py  grass.py  landscape.py  rock.py  water.py
Lab-2/src/game/state/: game.py  gameselect.py  gamestate.py
Lab-2/src/game/units/: animal.py  base.py  blank.py  blankunit.py  cavalry.py  cursor.py  melee.py  range.py  unit.py
Lab-2/src/game/units/neutral/: animal.py
Lab-2/src/game/units/squad/: cavalry.py  melee.py  range.py
Lab-2/src/game/weapons/: bow.py  crossbow.py  dagger.py  melee_weapon.py  range_weapon.py  sword.py  weapon.py  weaponless.py
Lab-2/src/game/weapons/melee/: sword.py
Lab-2/src/game/weapons/range/: bow.py  crossbow.py
Lab-2/src/landscapes/: bush.py  grass.py  rock.py  water.py
Lab-2/src/tests/: test_base.py  test_cell.py  test_combatable.py  test_field.py
Lab-2/src/units/: blankunit.py  unit.py
Lab-2/src/units/neutral/: animal.py
Lab-2/src/units/squad/: cavalry.py  melee.py  range.py
Lab-2/src/weapon/: melee_weapon.py  weapon.py
Lab-2/src/weapon/melee/: dagger.py
Lab-2/src/weapon/range/: bow.py
Lab-2/src/weapons/: melee_weapon.py  range_weapon.py  weaponless.py
Lab-2/src/weapons/melee/: dagger.py  sword.py
Lab-2/src/weapons/range/: bow.py  crossbow.py
Lab-2/units/: unit.py
Lab-2/units/landscape/: bush.py  rock.py  water.py
Lab-2/units/neutral/: animal.py  fruit.py
Lab-2/units/squad/: cavalry.py  melee.py  range.py
Lab-2/weapon/: range_weapon.py  weaponless.py
Lab-2/weapon/melee/: sword.py
Lab-2/weapon/range/: crossbow.py
Lab-3/: src
Lab-3/report/: config.tex  content.tex  main.tex
