[tool.poetry]
name = "Hanoi Towers"
version = "0.1.0"
description = ""
authors = ["andreymlv <ndrmlv@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.1.2"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
