[tool.poetry]
name = "Lab-2"
version = "0.1.0"
description = ""
authors = ["Andrey Malov <ndrmlv@ya.ru>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
keyboard = "^0.13.5"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
