[tool.poetry]
name = "game"
version = "0.1.0"
description = "Console game"
authors = ["Andrey Malov <ndrmlv@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
keyboard = "^0.13.5"
multipledispatch = "^0.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.982"
aiohttp = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
game = "game.main:main"
